<?xml version="1.0"?>
<package format="3">
  <name>pure_pursuit_ros2</name>
  <version>0.1.0</version>
  <description>C++ implementation of pure pursuit algorithm in ROS2.</description>

  <maintainer email="gurselturkeri@hotmail.com">gursel</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
